<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/nuevofondo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bienvenido"
        android:textColor="@color/azuloscurosena"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="157dp"
        android:layout_gravity="center"
        android:src="@drawable/gato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/descripcion_inicio"
        android:textAlignment="center"
        android:textColor="@color/azuloscurosena"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.065" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btniniciosesion"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/botondegradado"
        android:text="@string/inicio"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:cornerRadius="40dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.149" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnregistro"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/botondegradado"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:cornerRadius="40dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btniniciosesion"
        app:layout_constraintVertical_bias="0.085" />

</androidx.constraintlayout.widget.ConstraintLayout>